--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{% static 'core/css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/loading_spinner.css' %}">
-    <link rel="stylesheet" href="{% static 'core/css/'|add:current_theme|add:'.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/'|add:theme|add:'.css' %}">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
