--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -1,12 +1,9 @@
 {% load static %}
 {% load i18n %}
 {% load custom_filters %}
-{% load analytical %}
-{% load google_analytics_gtag %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    {% analytical_head_top %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,12 +15,18 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
-    {% google_analytics_gtag %}
-    {% analytical_head_bottom %}
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0GL4LRYGDW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-0GL4LRYGDW');
     </script>
 </head>
 <body>
-    {% analytical_body_top %}
     <header class="header">
         <div class="logo" onclick="location.href='{% url 'core:index' %}'">
             <img src="{% static 'core/images/'|add:theme|add:'_theme_logo.png' %}" alt="Logo">
@@ -66,7 +69,6 @@
         </div>
         <p>&copy; 2023 JVMartyns</p>
     </footer>
-    {% analytical_body_bottom %}
 </body>
 <script src="{% static 'core/js/load_after.js' %}"></script>
 </html>
