--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -12,19 +12,22 @@
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/loading_spinner.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/'|add:theme|add:'.css' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'core/images/dark_theme_favicon.ico' %}">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0GL4LRYGDW"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+    {% if GA_TRACKING_ID %}
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ GA_TRACKING_ID }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        gtag('config', 'G-0GL4LRYGDW');
-    </script>
+            gtag('config', '{{ GA_TRACKING_ID }}');
+        </script>
+    {% endif %}
 </head>
 <body>
     <header class="header">
