--- a/core/static/core/css/light_theme.css
+++ b/core/static/core/css/light_theme.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #b9b9b9;
+  --primary-color: #90b0c6;
   --secondary-color: #fefefe;
   --text-color: #000000;
   --primary-text-shadow-color: #ffffff;
