--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -11,8 +11,9 @@
     <link rel="stylesheet" href="{% static 'core/css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/loading_spinner.css' %}">
-    <link rel="stylesheet" href="{% static 'core/css/'|add:theme|add:'.css' %}">
     <link rel="icon" type="image/x-icon" href="{% static 'core/images/dark_theme_favicon.ico' %}">
+
+    <link id="theme-stylesheet" rel="stylesheet" href="{% static 'core/css/'|add:current_theme|add:'_theme.css' %}">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
@@ -32,7 +33,7 @@
 <body>
     <header class="header">
         <div class="logo" onclick="location.href='{% url 'core:index' %}'">
-            <img src="{% static 'core/images/'|add:theme|add:'_theme_logo.png' %}" alt="Logo">
+            <img id="site-logo" src="{% static 'core/images/'|add:current_theme|add:'_theme_logo.png' %}" alt="Logo">
             <h1>JVMartyns</h1>
         </div>
         <div class="menu">
@@ -74,4 +75,7 @@
     </footer>
 </body>
 <script src="{% static 'core/js/load_after.js' %}"></script>
+<script src="{% static 'core/js/theme_selector.js' %}"></script>
+<script src="{% static 'core/js/language_selector.js' %}"></script>
+
 </html>
