--- a/core/templates/core/partials/_theme_selector.html
+++ b/core/templates/core/partials/_theme_selector.html
@@ -1,9 +1,11 @@
-<div class="theme-selector">
+{% load i18n %}
+<div id="theme-selector" class="theme-selector">
     <form id="theme-form" action="{% url 'core:set_theme' %}" method="post">
         {% csrf_token %}
         <select name="theme" onchange="this.form.submit()">
+            <option selected disabled>{% trans 'Theme' %}</option>
             {% for theme in themes %}
-                <option value="{{ theme.0 }}">{{ theme.1 }}</option>
+                <option value="{{ theme.0 }}" {% if theme.0 == current_theme %}selected{% endif %}>{{ theme.1 }}</option>
             {% endfor %}
         </select>
     </form>
