--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -431,6 +431,7 @@ header {
   box-shadow: 0px 0px 32px 1px var(--secondary-box-shadow-color);
   padding: 16px;
   position: relative;
+  width: 40%;
 }
 
 .formation-image {
@@ -456,6 +457,10 @@ header {
 
 .formation-content {
   margin-left: 0 px;
+}
+
+.course {
+  width: fit-content;
 }
 
 .course a {
@@ -799,6 +804,10 @@ footer {
     justify-content: left;
     margin-left: 0;
     margin-top: 10px;
+    text-align: left;
+  }
+
+  .formation.course .formation-content {
     text-align: center;
   }
 
