--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -778,6 +778,10 @@ footer {
     padding: 10px;
     font-size: 20px;
   }
+
+  .formation {
+    width: 100%;
+  }
 }
 
 @media screen and (max-width: 375px) {
@@ -785,7 +789,6 @@ footer {
     flex-direction: column;
     margin: 10px;
     margin-top: 50px;
-    width: 100%;
   }
 
   .formation-image {
