--- a/core/static/core/css/light_theme.css
+++ b/core/static/core/css/light_theme.css
@@ -11,4 +11,5 @@
   --primary-box-shadow-color: #70deff;
   --secondary-box-shadow-color: rgb(59, 59, 59);
   --experience-background-color: #dbdbdb;
+  --view-certificate-btn-color: #3498db;
 }
