--- a/core/static/core/css/dark_theme.css
+++ b/core/static/core/css/dark_theme.css
@@ -11,4 +11,5 @@
   --primary-box-shadow-color: #555555;
   --secondary-box-shadow-color: rgba(255, 255, 255, 0.1);
   --experience-background-color: #090f1b;
+  --view-certificate-btn-color: #343434;
 }
