--- a/core/static/core/css/default_theme.css
+++ b/core/static/core/css/default_theme.css
@@ -12,4 +12,5 @@
   --primary-box-shadow-color: #70deff;
   --secondary-box-shadow-color: rgba(255, 255, 255, 0.1);
   --experience-background-color: #000d24;
+  --view-certificate-btn-color: #0066ff;
 }
