--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -16,6 +16,7 @@
     <link id="theme-stylesheet" rel="stylesheet" href="{% static 'core/css/'|add:current_theme|add:'_theme.css' %}">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.2/color-thief.umd.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
 
     {% if GA_TRACKING_ID %}
