--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -15,7 +15,7 @@
 
     <link id="theme-stylesheet" rel="stylesheet" href="{% static 'core/css/'|add:current_theme|add:'_theme.css' %}">
 
-    <script src="{% static '/core/js/color-thief-2.4.0/dist/color-thief.umd.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/color-thief/2.3.0/color-thief.umd.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="{% static 'core/js/load_before.js' %}"></script>
 
